# openclaw-supervisor

./: .gitignore  Cargo.toml  README.md  config.yaml.example  design.md
.cargo/: config.toml
openclaw-supervisor/: Cargo.toml
openclaw-supervisor-common/: Cargo.toml
openclaw-supervisor-common/src/: lib.rs
openclaw-supervisor-ebpf/: Cargo.toml
openclaw-supervisor-ebpf/src/: filesystem.rs  main.rs  network.rs
openclaw-supervisor/src/: audit.rs  config.rs  dns.rs  main.rs
openclaw-supervisor/src/bpf/: filesystem.rs  mod.rs  network.rs
xtask/src/: main.rs
