[workspace]
resolver = "2"
members = [
    "openclaw-supervisor",
    "openclaw-supervisor-common",
    "openclaw-supervisor-ebpf",
    "xtask",
]
default-members = ["openclaw-supervisor"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openclaw/openclaw-supervisor"

[workspace.dependencies]
aya = "0.13"
aya-ebpf = "0.1"
aya-log = "0.2"
aya-log-ebpf = "0.1"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
libc = "0.2"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
notify = "6.1"
hickory-resolver = "0.24"
chrono = { version = "0.4", features = ["serde"] }
ipnetwork = "0.20"

# eBPF profile settings (required for eBPF compilation)
# Note: eBPF programs must be compiled separately with special settings
# Use: cargo xtask build-ebpf
[profile.dev.package.openclaw-supervisor-ebpf]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false

[profile.release.package.openclaw-supervisor-ebpf]
opt-level = 3
debug = false
codegen-units = 1
